--- a/app/svc.yaml
+++ b/app/svc.yaml
@@ -1,1 +1,12 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: argo-test-nginx
+spec:
+  selector:
+    app: argo-test-nginx
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
